perf: 6 performance optimizations + skip macOS resource forks
- Single-pass find_images with os.walk (was 22 rglob calls)
- ThreadPoolExecutor over ProcessPoolExecutor (avoids IPC overhead)
- Early bail-out for no-op images (already target format + size)
- Quieter logging (only resized/errors printed per-image)
- Skip piexif round-trip for HEIC/AVIF (pass raw EXIF bytes)
- Batch stat() calls during discovery
- Skip macOS resource fork files (._* prefix)
- Add dev-docs/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ venv/
 .vscode/
 .idea/
 
+# Dev docs (internal notes)
+dev-docs/
+
 # Output folders (created by the resizer)
 converted/
 originals/
